[package]
name = "gg_engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*",
]

[dependencies]
c_utils      = { path = "crates/c_utils"      }
vector_math  = { path = "crates/vector_math"  }
gles_wrapper = { path = "crates/gles_wrapper" }
sdl_wrapper  = { path = "crates/sdl_wrapper"  }

#[target.'cfg(target_arch = "linux")'.dependencies]
